pihole/pro.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pro-pihole
spec:
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      restartPolicy: Always
      volumes:
      - name: pihole-v
        hostPath:
          path: "/home/kube-data/pihole/pihole"
      - name: dnsmasq-v
        hostPath:
          path: "/home/kube-data/pihole/dnsmasq"
      containers:
      - image: pihole/pihole:latest
        name: pihole
        volumeMounts:
        - name: pihole-v
          mountPath: '/etc/pihole'
        - name: dnsmasq-v
          mountPath: '/etc/dnsmasq.d'

---

kind: Service
apiVersion: v1
metadata:
  name: pihole-tcp
  namespace: pro-pihole
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.2
  ports:
  - port: 5380
    targetPort: 80
    name: port80
    protocol: TCP
  - port: 53443
    targetPort: 443
    name: port443
    protocol: TCP
  - port: 53
    targetPort: 53
    protocol: TCP
    name: port53
  selector:
    app: pihole
  type: LoadBalancer

---

kind: Service
apiVersion: v1
metadata:
  name: pihole-udp
  namespace: pro-pihole
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.2
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: port53-udp
    - port: 67
      targetPort: 67
      protocol: UDP
      name: port67-udp
  selector:
    app: pihole
  type: LoadBalancer

---
