pihole/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole.sysadm.org
spec:

  tls:
  - hosts:
    - pihole.sysadm.org
    secretName: wildcard.sysadm.org

  rules:
  - host: pihole.sysadm.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pihole
            port:
              number: PPPPPP

---
